service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-ui-kowl
  namespace: test-kafka-ui-kowl
spec:
  selector:
    app: kafka-ui-kowl
  ports:
    - port: 8080
      targetPort: 8080
